# codexProxy-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.local.yml  docker-compose.yml
.github/workflows/: docker-image.yml  release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.ts  index.css  types.ts
frontend/src/components/: AccountUsageModal.tsx  DashboardUsageCharts.tsx  Layout.tsx
frontend/src/components/ui/: select.tsx
frontend/src/locales/: en.json  zh.json
frontend/src/pages/: Accounts.tsx  Operations.tsx
src/: config.rs  main.rs  state.rs
src/admin/: handler.rs
src/db/: mod.rs  models.rs  queries.rs
src/proxy/: handler.rs  mod.rs  ratelimit.rs  translator.rs  useragent.rs
src/scheduler/: health.rs  mod.rs  scorer.rs  selector.rs
src/token/: cache.rs  mod.rs  refresh.rs
