[package]
name = "codex-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip", "limit", "trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库 — PostgreSQL 异步驱动
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json"] }
parking_lot = "0.12"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "socks"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 工具
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
dashmap = "6"
base64 = "0.22"
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
bytes = "1"

# 密码/哈希
sha2 = "0.10"

# 前端嵌入
include_dir = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
